<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.lotr.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_menuFragment"
            app:destination="@id/menuFragment" />
    </fragment>

    <fragment
        android:id="@+id/movieListFragment"
        android:name="com.example.lotr.ui.movie.movie_list.MovieListFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movie_list">
        <action
            android:id="@+id/action_nav_gallery_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />

    </fragment>

    <fragment
        android:id="@+id/characterListFragment"
        android:name="com.example.lotr.ui.character.CharacterListFragment"
        android:label="@string/characters"
        tools:layout="@layout/fragment_character" />

    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.example.lotr.ui.movie.movie_detail.MovieDetailFragment"
        android:label="Details"
        tools:layout="@layout/movie_detail_fragment">
        <argument
            android:name="selectedProperty"
            app:argType="com.example.lotr.logic.entity.Movie" />
    </fragment>
    <fragment
        android:id="@+id/watchlistFragment"
        android:name="com.example.lotr.ui.watchlist.list.WatchlistFragment"
        android:label="@string/watchlist"
        tools:layout="@layout/watchlist_fragment">
        <action
            android:id="@+id/action_watchlistFragment_to_editWatchlist"
            app:destination="@id/editWatchlist" />
    </fragment>
    <fragment
        android:id="@+id/editWatchlist"
        android:name="com.example.lotr.ui.watchlist.edit.EditWatchlistFragment"
        android:label="@string/edit"
        tools:layout="@layout/edit_watchlist_fragment">
        <argument
            android:name="selectedProperty"
            app:argType="com.example.lotr.logic.entity.MovieWatchlist" />
        <action
            android:id="@+id/action_editWatchlist_to_watchlist"
            app:destination="@id/watchlistFragment"
            app:popUpTo="@+id/editWatchlist"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/quoteListFragment"
        android:name="com.example.lotr.ui.quote.QuoteListFragment"
        android:label="@string/quotes"
        tools:layout="@layout/quote_list_fragment" />
    <fragment
        android:id="@+id/menuFragment"
        android:name="com.example.lotr.ui.menu.MenuFragment"
        android:label="@string/explore"
        tools:layout="@layout/fragment_menu">
        <action
            android:id="@+id/action_menuFragment_to_nav_gallery"
            app:destination="@id/movieListFragment" />
        <action
            android:id="@+id/action_menuFragment_to_quoteListFragment"
            app:destination="@id/quoteListFragment" />
        <action
            android:id="@+id/action_menuFragment_to_characterListFragment"
            app:destination="@id/characterListFragment" />
        <action
            android:id="@+id/action_menuFragment_to_watchlistFragment"
            app:destination="@id/watchlistFragment" />
        <action
            android:id="@+id/action_menuFragment_to_movieListFragment"
            app:destination="@id/movieListFragment" />
    </fragment>

</navigation>