<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.MenuFragment"
    android:background="@color/green_2">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0.2">

    </ImageView>

    <Button
        android:id="@+id/btn_to_watchlist"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/watchlist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628" />

    <Button
        android:id="@+id/btn_to_movies"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:background="@drawable/rounded_button"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/movies"
        app:layout_constraintBottom_toTopOf="@+id/btn_to_quotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <Button
        android:id="@+id/btn_to_quotes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/quotes"
        app:layout_constraintBottom_toTopOf="@+id/btn_to_characters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <Button
        android:id="@+id/btn_to_characters"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/characters"
        app:layout_constraintBottom_toTopOf="@+id/btn_to_watchlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964" />

</androidx.constraintlayout.widget.ConstraintLayout>