<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.lotr.ui.movie.movie_detail.MovieDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailFragment"
        android:background="@color/green_2">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:alpha="0.2">

        </ImageView>

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@{viewModel.displayName}"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="39sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_movie_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/tv_movie_runtime_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:text="@{viewModel.displayRuntime}"
                        android:textColor="@color/white"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_rotten_tomatoes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rotten_tomatoes_rating"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/tv_rotten_tomatoes_value"
                        android:layout_width="169dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:textColor="@color/white"
                        android:text="@{viewModel.displayRottenTomatoes}"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_awards_nomination"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/academy_award_nominations"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/tv_award_nomination_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:textColor="@color/white"
                        android:text="@{viewModel.displayAwardNominations}"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_awards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/academy_award_wins"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/tv_awards_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:textColor="@color/white"
                        android:text="@{viewModel.displayAwardWins}"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/runtime_in_minutes"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/tv_runtime_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:textColor="@color/white"
                        android:text="@{viewModel.displayRuntime}"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_budget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/budget_in_millions"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/tv_budget_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:textColor="@color/white"
                        android:text="@{viewModel.displayBudget}"
                        android:textSize="20dp" />
                </TableRow>

            </TableLayout>


        </LinearLayout>


        <Button
            android:id="@+id/quote_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:background="@drawable/rounded_button"
            android:gravity="end"
            android:onClick="@{() -> viewModel.onAddToWatchlist()}"
            android:text="ADD TO WATCHLIST"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>